<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clear"
            android:icon="@mipmap/ic_home_white_24dp"
            android:title="@string/action_clear" />

        <item
            android:id="@+id/nav_paper"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/paper" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/action_about" />

    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"
            android:title="@string/exit" />
    </group>

</menu>
